Update links after removal of demo apps to separate repository. Assumes vwf-apps is cloned to public/demos/.

--- a/demos.haml
+++ b/demos.haml
@@ -121,9 +121,9 @@ title: Demos - Virtual World Framework
         %h3 bzflag
         %p
           The bzflag app is VWF's version of the classic arcade game. Use the WASD keys to move and the Enter key to fire your laser cannon. Use the chat feature to communicate and taunt your opponents, but most of all look out for opposing tanks!
-        %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/bzflag"} Launch New Session
+        %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/demos/bzflag"} Launch New Session
       .col-sm-4
-        %a{href: "https://demo.virtual.wf/bzflag"}
+        %a{href: "https://demo.virtual.wf/demos/bzflag"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-bzflag.png"}
 
 .panel.panel-default.panel-demo.core{"data-app-name" => "tile-puzzle-2D"}
@@ -133,9 +133,9 @@ title: Demos - Virtual World Framework
         %h3 Tile Puzzle 2D
         %p
           Apps don't have to be 3D! The 2D tile puzzle is an example of a VWF app that does not use 3D graphics or models. Play by clicking on a tile to move it to the open space.
-        %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/tile-puzzle-2D"} Launch New Session
+        %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/demos/tile-puzzle-2D"} Launch New Session
       .col-sm-4
-        %a{href: "https://demo.virtual.wf/tile-puzzle-2D"}
+        %a{href: "https://demo.virtual.wf/demos/tile-puzzle-2D"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-tile-puzzle-2D.png"}
 
 %h2 Who's Using VWF
