--- a/demos.haml
+++ b/demos.haml
@@ -90,9 +90,9 @@ title: Demos - Virtual World Framework
 /         %h3 Command Center
 /         %p
 /           The command center app is a virtual representation of a joint operations center, intended for use as a collaborative training classroom. Navigate using the standard VWF key and mouse controls.
-/         %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/command-center"} Launch New Session
+/         %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/demos/command-center"} Launch New Session
 /       .col-sm-4
-/         %a{href: "https://demo.virtual.wf/command-center"}
+/         %a{href: "https://demo.virtual.wf/demos/command-center"}
 /           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-command-center.png"}
 /     .row
 /       .col-xs-12
@@ -109,9 +109,9 @@ title: Demos - Virtual World Framework
 /         %p
 /           %a{target:"_blank", href:"http://www.agi.com/"} Analytical Graphics, Inc's (AGI)
 /           Cesium is a web-based globe and map engine for visualizing dynamic data. This demo app allows a user to have synchronized camera views across multiple clients. Pressing the "R" key will reset the synchronized views across all instances.
-/         %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/agi/cesium#!cesium"} Launch New Session
+/         %a.btn.btn-info{role: "button", href: "http://demo.virtual.wf/demos/agi/cesium"} Launch New Session
 /       .col-sm-4
-/         %a{href: "https://demo.virtual.wf/agi/cesium#!cesium"}
+/         %a{href: "http://demo.virtual.wf/demos/agi/cesium"}
 /           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-agi-cesium.jpg"}
 
 .panel.panel-default.panel-demo.core{"data-app-name" => "bzflag"}
