Update mars-game link on VWF website.

--- a/demos.haml
+++ b/demos.haml
@@ -45,9 +45,9 @@ title: Demos - Virtual World Framework
         %h3 Mars Game (beta)
         %p
           ADL's Mars Game teaches high school students math and computer programming concepts as players operate a brave Mars rover who needs to save the human explorers on their way to Mars.
-        %a.btn.btn-info{role: "button", href: "http://development.virtual.wf/mars-game"} Launch New Session
+        %a.btn.btn-info{role: "button", href: "http://pcvm2-21.instageni.stanford.edu:3001/mars-game/"} Launch New Session
       .col-sm-4
-        %a{href: "http://development.virtual.wf/mars-game"}
+        %a{href: "http://pcvm2-21.instageni.stanford.edu:3001/mars-game/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-mars-game.png"}
     .row
       .col-xs-12
